update gradient and icons position

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,7 +7,7 @@ $color-carnation-pink: #ffa7c3;
 $color-white-solid: #ffffff;
 
 // GRADIENTS
-$gradient-light: linear-gradient(#f02aa6, #ff6f48);
+$gradient-light: linear-gradient(180deg, #ff6f48 0%, #f02aa6 100%);
 $gradient-dark: linear-gradient(#4851ff, #f02aa6);
 $gradient-background: linear-gradient(180deg, #ffffff 0%, #f0f1ff 100%);
 
