--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .btn--header {
-  background: linear-gradient(#f02aa6, #ff6f48);
+  background: linear-gradient(180deg, #ff6f48 0%, #f02aa6 100%);
   color: #ffffff;
 }
 
@@ -151,7 +151,7 @@ body {
   height: 322px;
   border-radius: 1.5rem;
   background-color: #ffffff;
-  margin-bottom: 8rem;
+  margin-bottom: 5.6rem;
   box-shadow: 0px 2.5rem 5rem rgba(6, 22, 141, 0.0442381);
   padding: 6.4rem 3.2rem 4rem 3.2rem;
   display: flex;
@@ -160,7 +160,7 @@ body {
 }
 .cards .card__img {
   position: absolute;
-  top: -2.2rem;
+  top: -2.6rem;
 }
 .cards .card__heading {
   margin-bottom: 2.4rem;
@@ -175,7 +175,7 @@ body {
   margin-top: auto;
 }
 .cards .card--1 {
-  background: linear-gradient(#f02aa6, #ff6f48);
+  background: linear-gradient(180deg, #ff6f48 0%, #f02aa6 100%);
   color: #ffffff;
 }
 
