update buttons padding

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -55,8 +55,9 @@ body {
 .btn {
   border-radius: 100vw;
   border: none;
-  width: 15.7rem;
-  height: 5.6rem;
+  // width: 15.7rem;
+  // height: 5.6rem;
+  padding: 1.4rem 3.2rem;
   font-weight: 700;
   font-size: 1.8rem;
   line-height: 2.8rem;
