--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,7 @@ body {
 .btn {
   border-radius: 100vw;
   border: none;
-  width: 15.7rem;
-  height: 5.6rem;
+  padding: 1.4rem 3.2rem;
   font-weight: 700;
   font-size: 1.8rem;
   line-height: 2.8rem;
