update button text and gradient

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .btn--footer {
-  background: linear-gradient(#4851ff, #f02aa6);
+  background: linear-gradient(180deg, #4851ff -54.32%, #f02aa6 100%);
   color: #ffffff;
 }
 
