--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,17 @@ body {
   grid-template-columns: minmax(3.9rem, 1fr) repeat(2, minmax(10rem, 55.5rem)) minmax(3.9rem, 1fr);
   grid-template-rows: 8rem 76rem repeat(2, minmax(12rem, min-content));
 }
+@media screen and (max-width: 48em) {
+  .wrapper {
+    grid-template-rows: 8rem 59rem repeat(2, minmax(12rem, min-content));
+  }
+}
+@media screen and (max-width: 23.5em) {
+  .wrapper {
+    grid-template-columns: 1.6rem 1fr 1.6rem;
+    grid-template-rows: 8rem min-content 30.1rem repeat(2, minmax(12rem, min-content));
+  }
+}
 
 .btn {
   cursor: pointer;
@@ -38,9 +49,15 @@ body {
   font-weight: 700;
   font-size: 1.8rem;
   line-height: 2.8rem;
+  font-size: 1.8rem;
+  line-height: 2.8rem;
+  font-weight: 700;
 }
 @media screen and (max-width: 48em) {
   .btn {
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    font-weight: 700;
     padding: 0.9rem 1.4rem;
   }
 }
@@ -49,25 +66,17 @@ body {
 }
 
 .btn--nav {
-  font-size: 1.8rem;
-  line-height: 2.8rem;
-  font-weight: 700;
   background-color: #13183f;
   color: #ffffff;
   z-index: 2;
 }
+
 .btn--header {
-  font-size: 1.8rem;
-  line-height: 2.8rem;
-  font-weight: 700;
   background: linear-gradient(180deg, #ff6f48 0%, #f02aa6 100%);
   color: #ffffff;
 }
 
 .btn--footer {
-  font-size: 1.8rem;
-  line-height: 2.8rem;
-  font-weight: 700;
   background: linear-gradient(180deg, #4851ff -54.32%, #f02aa6 100%);
   color: #ffffff;
 }
@@ -79,6 +88,13 @@ body {
   justify-content: space-between;
   align-items: center;
   padding-top: 2.4rem;
+}
+@media screen and (max-width: 23.5em) {
+  .navigation {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-bottom: 3.8rem;
+  }
 }
 .navigation__logo {
   width: 11.4rem;
@@ -96,10 +112,25 @@ body {
   grid-row: 1/3;
   margin-bottom: 4.6rem;
 }
+@media screen and (max-width: 23.5em) {
+  .image {
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
+}
 .image img {
+  display: block;
   position: absolute;
   bottom: 0;
   left: 0;
+}
+@media screen and (max-width: 23.5em) {
+  .image img {
+    width: 100%;
+    position: initial;
+    height: auto;
+    display: block;
+  }
 }
 
 .content {
@@ -117,6 +148,12 @@ body {
   line-height: 7rem;
   margin-bottom: 2.9rem;
 }
+@media screen and (max-width: 48em) {
+  .content__text--heading {
+    font-size: 4rem;
+    line-height: 5.1rem;
+  }
+}
 .content__text--info {
   font-size: 1.8rem;
   line-height: 2.8rem;
@@ -124,20 +161,45 @@ body {
   margin-bottom: 4rem;
   color: #83869a;
 }
+@media screen and (max-width: 48em) {
+  .content__text--info {
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    font-weight: 500;
+  }
+}
 
 .cards {
   grid-column: 2/4;
   grid-row: 3/4;
   padding-top: 2.5rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min-content, 35rem));
   column-gap: 3rem;
   margin-bottom: 6rem;
 }
+@media screen and (max-width: 48em) {
+  .cards {
+    grid-template-columns: repeat(auto-fit, 1fr);
+  }
+}
+@media screen and (max-width: 48em) {
+  .cards {
+    grid-template-columns: repeat(auto-fit, minmax(min-content, 33.9rem));
+    column-gap: 1.1rem;
+    margin-bottom: 3rem;
+  }
+}
+@media screen and (max-width: 23.5em) {
+  .cards {
+    grid-template-columns: 1fr;
+    grid-column: 2/3;
+    grid-row: 4/5;
+  }
+}
 .cards .card {
   position: relative;
-  width: 350px;
-  height: 322px;
+  height: 32.2rem;
   border-radius: 1.5rem;
   background-color: #ffffff;
   margin-bottom: 8rem;
@@ -146,6 +208,13 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+}
+@media screen and (max-width: 48em) {
+  .cards .card {
+    height: 28.3rem;
+    margin-bottom: 5.6rem;
+    padding: 5.6rem 3.2rem 3.2rem;
+  }
 }
 .cards .card__img {
   position: absolute;
@@ -156,11 +225,24 @@ body {
   line-height: 3rem;
   margin-bottom: 2.4rem;
 }
+@media screen and (max-width: 48em) {
+  .cards .card__heading {
+    font-size: 2rem;
+    line-height: 2.5rem;
+  }
+}
 .cards .card__text {
   font-size: 1.8rem;
   line-height: 2.8rem;
   font-weight: 500;
   color: #83869a;
+}
+@media screen and (max-width: 48em) {
+  .cards .card__text {
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    font-weight: 500;
+  }
 }
 .cards .card__cta {
   font-size: 1.8rem;
@@ -186,6 +268,12 @@ body {
   grid-row: 4/5;
   background-color: #13183f;
 }
+@media screen and (max-width: 23.5em) {
+  .footer {
+    grid-column: 1/-1;
+    grid-row: 5/6;
+  }
+}
 
 .footer__content {
   grid-column: 2/4;
@@ -193,6 +281,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+@media screen and (max-width: 23.5em) {
+  .footer__content {
+    grid-column: 2/3;
+    grid-row: 5/6;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
