--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -20,7 +20,7 @@ $shadow-box: 0px 2.5rem 5rem rgba(6, 22, 141, 0.0442381);
 
 // BREAKPOINTS
 $bp-tablet: 48em;
-$bp-mobile: 23.4em;
+$bp-mobile: 23.5em;
 
 *,
 *::before,
@@ -53,6 +53,18 @@ body {
     minmax(3.9rem, 1fr);
 
   grid-template-rows: 8rem 76rem repeat(2, minmax(12rem, min-content));
+
+  @media screen and (max-width: $bp-tablet) {
+    grid-template-rows: 8rem 59rem repeat(2, minmax(12rem, min-content));
+  }
+
+  @media screen and (max-width: $bp-mobile) {
+    grid-template-columns: 1.6rem 1fr 1.6rem;
+    grid-template-rows: 8rem min-content 30.1rem repeat(
+        2,
+        minmax(12rem, min-content)
+      );
+  }
 }
 
 .btn {
@@ -63,8 +75,10 @@ body {
   font-weight: 700;
   font-size: 1.8rem;
   line-height: 2.8rem;
+  @include body-m-bold;
 
   @media screen and (max-width: $bp-tablet) {
+    @include body-s-bold;
     padding: 0.9rem 1.4rem;
   }
 
@@ -74,27 +88,17 @@ body {
 }
 
 .btn--nav {
-  @include body-m-bold;
   background-color: $color-bunting;
   color: $color-white-solid;
   z-index: 2;
-
-  @media screen and (max-width: $bp-tablet) {
-    // font-style: normal;
-    // font-size: 1.6rem;
-    // font-weight: 700;
-    // line-height: 28px;
-  }
 }
 
 .btn--header {
-  @include body-m-bold;
   background: $gradient-light;
   color: $color-white-solid;
 }
 
 .btn--footer {
-  @include body-m-bold;
   background: $gradient-footer;
   color: $color-white-solid;
 }
