--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,6 +4,11 @@
   grid-row: 4 / 5;
 
   background-color: $color-bunting;
+
+  @media screen and (max-width: $bp-mobile) {
+    grid-column: 1 / -1;
+    grid-row: 5 / 6;
+  }
 }
 
 .footer__content {
@@ -13,4 +18,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @media screen and (max-width: $bp-mobile) {
+    grid-column: 2 / 3;
+    grid-row: 5 / 6;
+  }
 }
