--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -26,6 +26,12 @@
   line-height: 3rem;
 }
 
+@mixin heading-xs {
+  @extend %heading;
+  font-size: 2rem;
+  line-height: 2.5rem;
+}
+
 @mixin body-m-bold {
   font-size: 1.8rem;
   line-height: 2.8rem;
@@ -36,6 +42,12 @@
   font-size: 1.8rem;
   line-height: 2.8rem;
   font-weight: 500;
+}
+
+@mixin body-s-bold {
+  font-size: 1.6rem;
+  line-height: 2.8rem;
+  font-weight: 700;
 }
 
 @mixin body-s {
